# databricks-dab-uv

./: .gitignore  .pre-commit-config.yaml  README.md  databricks.yml  pyproject.toml
.github/workflows/: deploy.yml  quality-checks.yml  validate.yml
resources/: uvdatabricks.job.yml
scripts/: setup.ps1  setup.sh
src/: exploration.ipynb  load.py
src/uvdatabricks/logger/: __init__.py
src/uvdatabricks/utils/: op.py  taxis.py
tests/: conftest.py  main_test.py  second_test.py
