[project]
name = "uvdatabricks"
version = "0.0.2"
authors = [{ name = "psanchezr@hiberus.com" }]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov>=7.0.0",
    "pytest-json-report>=1.5.0",
    "ruff>=0.14.3",
    "ty>=0.0.1a25",
    # Code completion support for Lakeflow Declarative Pipelines, also install databricks-connect
    "databricks-dlt",
    # databricks-connect can be used to run parts of this project locally.
    # Note that for local development, you should use a version that is not newer
    # than the remote cluster or serverless compute you connect to.
    # See also https://docs.databricks.com/dev-tools/databricks-connect.html.
    "databricks-connect>=15.4,<15.5",
    "mypy>=1.18.2",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uvdatabricks"]

[tool.hatch.build.targets.wheel.sources]
uvdatabricks = "src/uvdatabricks"

[project.scripts]
main = "uvdatabricks.main:main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "W",    # pycodestyle
    "F",    # pyflake
    "I",    # isort
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "D",    # pydocstyle
    "RUF",  # Ruff specific rules
]

exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "venv",
    "build",
    "assets",
    "docs/",
]

ignore = [
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
#    "D102",     # Missing docstring in public method, uncomment if not needed
#    "D103",     # Missing docstring in public function, uncomment if not needed
#    "D107",     #  D107 Missing docstring in `__init__`, uncomment if not needed
    "D203",     # no-blank-line-before-class (conflict with D211)
    "D213",     # multi-line-summary-second-line (conflict with D212)
    "S603",     # Secure subprocess input
    "S608",     # SQL Injection - Should be enabled at some point?
    "W293",     # Blank line contains whitespace
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["S", "D"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ty]
src = ["src", "!tests"]

[tool.ty.rules]
possibly-missing-import = "ignore"
